--- a/resources/CSS/style.css
+++ b/resources/CSS/style.css
@@ -47,13 +47,14 @@ p{
     font-size: 80%;
 }
 .container{
-    margin-bottom: 80px;
+    padding-bottom: 80px;
 }
 section{
-    margin-bottom: 150px;
+    padding-bottom: 20px;
 }
 .section-title{
     text-align: center;
+    margin-bottom: 60px;
 }
 .primary_btn{
    background-color: #21B573;
@@ -66,21 +67,37 @@ section{
     border: none;
     
 }
+.secondery-btn{
+    background-color: #21B573;
+    color: #fff;
+    font-weight: 400;
+    font-size: 60%;
+    border-radius: 5px;
+    padding: 10px 30px;
+    cursor: pointer;
+    border: none;
+     
+ }
 button:focus{
     outline: none;
 }
-footer{
-    text-align: center;
-}
 
+.subscribe{
+    height: 300px;
+    background-color:  #F0FFF0;
+}
 /*--------------------------------------------*/
 /*Banner Section*/
 /*--------------------------------------------*/
+header{
+    background-color: #F0FFF0;
+}
+.banner{
+    padding-bottom: 80px;
+    padding-top: 60px;
+}
 .navbar-brand img{
     width: 160px;
-}
-.banner-section{
-    background-color: #F0FFF0;
 }
 .banner-img{
     width: 100%;
@@ -108,6 +125,9 @@ span{
 /*--------------------------------------------*/
 /*Course Section*/
 /*--------------------------------------------*/
+.card-deck{
+    padding-top: 25px;
+}
 .card,.card-image{
     padding: 10px;
 }
@@ -129,7 +149,61 @@ span{
 small{
     font-size: 60%;
 }
-.person-image{
+/*--------------------------------------------*/
+/*TestMonial Section*/
+/*--------------------------------------------*/
+
+.person-image img{
     width: 150px;
 }
+.testmonial-text{
+    padding-right: 10%;
+}
+.testmonial{
+    margin-bottom: 0;
+}
+/*--------------------------------------------*/
+/*Subscribe Section*/
+/*--------------------------------------------*/
 
+
+
+footer{
+    background-color: #141E30;
+}
+.footer{
+    padding-top: 50px;
+}
+.footer-nav ul li{
+    list-style: none;
+    margin-top: 6px;
+}
+
+.container{
+    position: relative;
+}
+.footer-bottom{
+    background-color:#141E30;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+a:link,
+a:visited{
+    text-decoration: none;
+    color: #F0FFF0;
+    font-size: 80%; 
+}
+.nav-title{
+    color: #F0FFF0;
+    font-weight: 500;
+    font-size: 120%;
+}
+.footer-text{
+    font-size: 80%;
+    margin-right: 30px;
+    color: #F0FFF0;
+}
